# 1brc

./: .gitignore  Cargo.toml  Justfile  readme.adoc
.cargo/: config.toml
src/: main.rs
